[package]
name = "rcssl"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = { version = "1.9.0", features = ["serde"] }
openssl = "0.10.68"
rcgen = { version = "0.13.1", features = ["pem", "x509-parser", "crypto"] }
serde = { version = "1.0.216", features = ["derive"] }
thiserror = "2.0.8"
time = "0.3.37"

[dev-dependencies]
tempfile = "3.14.0"
